name:             http-kit
version:          0.0.0
synopsis:         A low-level HTTP library
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Zalora South East Asia Pte. Ltd
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Network.HTTP.Toolkit.Body
      Network.HTTP.Toolkit.Connection
      Network.HTTP.Toolkit.Header
      Network.HTTP.Toolkit.Request
      Network.HTTP.Toolkit.Type
  build-depends:
      base == 4.*
    , bytestring
    , http-types
    , case-insensitive

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , http-kit
    , bytestring
    , hspec >= 1.9
    , QuickCheck
    , quickcheck-instances
